<?xml version="1.0"?>
<package format="3">
  <name>ros_connector_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cknam0708@sju.ac.kr">nam</maintainer>
  <license>TODO: License declaration</license>

  <!-- 실행 시 필요한 의존성 추가 -->
  <depend>short_topic_connector</depend>
  <depend>huge_data_connector</depend>

  <!-- 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>